<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:id="@+id/bottomSheet"
    android:layout_height="wrap_content">

    <View
        android:layout_width="100dp"
        android:layout_height="7dp"
        android:background="@drawable/delete_indicator_shape"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/deleteNoteMessage"/>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/delete_no"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_no"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:padding="7dp"
        android:background="@drawable/no_select"
        android:fontFamily="@font/product_sans_regular"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/delete_yes"
        android:gravity="center"
        android:text="@string/text_yes"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_margin="10dp"
        android:padding="7dp"
        android:background="@drawable/yes_select"
        android:fontFamily="@font/product_sans_regular"
        android:textColor="@color/black"/>

</LinearLayout>